# Robyn

./: .Rbuildignore  .dockerignore  .gitignore  .nojekyll.rtf  .prettierrc  009561a5.b557d23d.js  009561a5.eab90ef0.js  009561a5.eb6af010.js  01a85c17.30974b98.js  01a85c17.7a2aa75e.js  03d550ee.71dd0495.js  03d550ee.e58d7c2f.js  03d550ee.f60b6aa6.js  0d9eee57.31f30724.js  0d9eee57.3fb19396.js  0d9eee57.89165b42.js  0d9eee57.8a754f67.js  1.131c2daf.js  1.2df653db.js  1.494bc5d3.js  1.86736c1d.js  1.9195704b.js  1.b0325e61.js  1.ce9e6ffa.js  1.ea2b8228.js  17.2e49ad4c.js  17.5366a0ae.js  17.8b70fdbb.js  17.e44ce4e8.js  17896441.2fef417f.js  17896441.b406a64d.js  18.01f78df9.js  18.1e1c820a.js  18.33ea3cc0.js  18.456a8395.js  18.641f941c.js  19.09bfab9f.js  2.87e4be89.js  2.a0708de6.js  2.e245ad8b.js  (+186 more)
python/: README.md  TARGETS  pyproject.toml  requirements.txt  setup.py
python/data/: dt_simulated_weekly_old.csv
python/documentations/: README.md
python/oldportedcode/: outputs.py  refresh.py  repopack-output.txt  response.py
python/python/: allocator.py  auxiliary.py  calibration.py  checks.py  cluster.py  convergence.py  data.py  exports.py  inputs.py  json.py  model.py  outputs.py  pareto.py  plots.py  refresh.py  response.py  transformation.py  zzz.py
python/scripts/: demo.py  working_demo.py
python/tests/: allocator_test.py  input_collect.rds  inputs_test.py  json_test.py  modeling.md  outputs_test.py  test_allocator.py  test_base_model_executor.py  test_calibration_input_validation.py  test_feature_engineering.py  test_holidays_data_validation.py  test_json.py  (+10 more)
(+1144 files in other folders)
